--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@rainbow-me/rainbowkit": "^2.0.5",
+    "@tanstack/react-query": "^5.28.14",
     "next": "13.4.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "2.x",
+    "wagmi": "^2.5.18"
   },
   "devDependencies": {
     "@types/node": "^20",
